--- a/Site/news/templates/index.html
+++ b/Site/news/templates/index.html
@@ -1,9 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p> Ceci est la base des news</p>
- {% for item in news %}
-    <p> {{ item.Titre }}</p><p> {{ item.Auteur }}</p>
-{% endfor %}
 
+ {% for item in object_list %}
+<div class="card">
+  <div class="card-header">
+<h5 class="card-title">{{ item.Titre }}</h5>
+ </div>
+  <div class="card-body">
+    <p class="card-text">{{ item.contenue|truncatewords:"100"  }}</p>
+    <a href="{% url 'detail' item.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+  </div>
+</div>
+
+
+{% endfor %}
+ {% if is_paginated %}
+        <nav aria-label="Page navigation container"></nav>
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+            {% endif %}
+        </ul>
+        </nav>
+        </div>
+    {% endif %}
 {% endblock %}
