--- a/Site/news/templates/index.html
+++ b/Site/news/templates/index.html
@@ -9,7 +9,7 @@
  </div>
   <div class="card-body">
     <p class="card-text">{{ item.contenue|truncatewords:"100"  }}</p>
-    <a href="{% url 'detail' item.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+    <a href="{% url 'detail' item.slug  %}" class="btn btn-primary">En savoir plus &rarr;</a>
   </div>
 </div>
 
