--- a/Site/news/templates/base.html
+++ b/Site/news/templates/base.html
@@ -6,13 +6,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-
-    <h1>Title page de base</h1>
+<ul class="nav justify-content-end">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/">Nouvelles</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Tutoriels</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Contact</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">Disabled</a>
+  </li>
+</ul>
+<br>
+<br>
     <div class="container">
         <div class="row">
+            <div class="col-sm-6">
 {% block content %}
 
 {% endblock %}
+    </div>
         </div>
     </div>
 </body>
